--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 				<a href=""><div class="client4"><img src="img/invision.png" alt=""></div></a>
 				<a href=""><div class="client5"><img src="img/cisco.png" alt=""></div></a>
 				<a href=""><div class="client6"><img src="img/be.png" alt=""></div></a>
-				<a href=""><div class="client7"><img src="img/canva.png" alt=""></div></a>
+				<a href=""><div class="client7"><img src="img/invision.png" alt=""></div></a>
 				<a href=""><div class="client8"><img src="img/instagram.png" alt=""></div></a>
 			</div>
 		</div>
